<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_by_price"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_orders"
        android:title="@string/manage_orders"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_revenue"
        android:title="@string/revenue"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>
</menu>